@@ -1,3 +1,8 @@
+2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_predict.c: Add support for 32bit integer horz. predictors.
+	http://bugzilla.maptools.org/show_bug.cgi?id=1911
+
 2009-01-20  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tools/tiffsplit.c: fix sampleformat to be shortv instead of longv.
